--- a/007_BingCustomSearch.ipynb
+++ b/007_BingCustomSearch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9285a2f1",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,19 @@
    "execution_count": null,
    "id": "9dc5b2c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "config01\n",
+      "bingcustomsearch\n",
+      "None\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -48,9 +60,11 @@
     "\n",
     "load_dotenv(override=True)  # take environment variables\n",
     "\n",
+    "print(\"these are required for Bing Custom Search configuration:\")\n",
     "print(os.getenv('BING_CUSTOM_INSTANCE_NAME'))\n",
     "print(os.getenv('BING_CUSTOM_CONNECTION_NAME'))\n",
     "\n",
+    "print('these are required for Bing Search configuration:')\n",
     "print(os.getenv('BING_CUSTOM_CONNECTION_ID'))\n",
     "print(os.getenv(\"BING_CONNECTION_ID\"))\n",
     "print(os.getenv(\"BING_CONNECTION_NAME\"))"
@@ -58,10 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d68b4690",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Agent created successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -88,10 +110,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "db3e9b8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building a drone capable of carrying 5 lbs (about 2.27 kg) requires selecting components that can handle the weight, provide enough lift, and maintain stability. Here’s a sample bill of materials (BOM) for a custom quadcopter drone with this payload capacity:\n",
+      "\n",
+      "**1. Frame**\n",
+      "- Type: Heavy-lift quadcopter frame (e.g., 500mm–700mm wheelbase, carbon fiber or aluminum)\n",
+      "- Example: Tarot 680 Pro Hexacopter Frame (can be used as 4 arms for quad or 6 arms for more lift)\n",
+      "\n",
+      "**2. Motors**\n",
+      "- Type: Brushless motors rated for 1.5kg–2kg thrust each\n",
+      "- Example: T-Motor MN4010 KV475 or Sunnysky X4112S KV400\n",
+      "- Quantity: 4\n",
+      "\n",
+      "**3. Electronic Speed Controllers (ESCs)**\n",
+      "- Type: 40A–60A ESCs (compatible with chosen motors)\n",
+      "- Example: Hobbywing XRotor 40A or similar\n",
+      "- Quantity: 4\n",
+      "\n",
+      "**4. Propellers**\n",
+      "- Material: Carbon fiber or nylon\n",
+      "- Size: 13\"–15\" diameter, depending on motor specs\n",
+      "- Example: APC 14x4.7 or T-Motor 1355 CF\n",
+      "- Quantity: 4 (plus extras/spares)\n",
+      "\n",
+      "**5. Flight Controller**\n",
+      "- Type: Advanced with GPS/telemetry\n",
+      "- Example: Pixhawk 4, DJI Naza M V2, or Holybro Kakute H7\n",
+      "- Quantity: 1\n",
+      "\n",
+      "**6. Battery**\n",
+      "- Type: Lithium Polymer (LiPo), high discharge\n",
+      "- Size: 6S (22.2V) 10000–16000mAh, depending on required flight time\n",
+      "- Example: Tattu 6S 16000mAh\n",
+      "\n",
+      "**7. Power Distribution Board (PDB) / Wiring**\n",
+      "- High-current PDB suitable for 4 motors and battery\n",
+      "- XT60/XT90 connectors\n",
+      "\n",
+      "**8. Landing Gear**\n",
+      "- Sturdy retractable or fixed gear, suited to heavy weight\n",
+      "\n",
+      "**9. Payload Mount**\n",
+      "- Custom bracket or gimbal depending on your load\n",
+      "\n",
+      "**10. Accessories**\n",
+      "- Radio transmitter/receiver (at least 6 channels)\n",
+      "- GPS module for autonomous flight (if needed)\n",
+      "- Telemetry kit for monitoring\n",
+      "- Propeller guards (optional for safety)\n",
+      "- Vibration dampeners\n",
+      "\n",
+      "**Example BOM Table**:\n",
+      "\n",
+      "| Component                | Example Model            | Quantity |\n",
+      "|--------------------------|-------------------------|----------|\n",
+      "| Frame                    | Tarot 680 Pro           | 1        |\n",
+      "| Motors                   | T-Motor MN4010          | 4        |\n",
+      "| ESCs                     | Hobbywing XRotor 40A    | 4        |\n",
+      "| Propellers               | T-Motor CF 1355         | 4        |\n",
+      "| Flight Controller        | Pixhawk 4               | 1        |\n",
+      "| Battery                  | Tattu 6S 16000mAh       | 1        |\n",
+      "| Power Distribution Board | Generic high current    | 1        |\n",
+      "| Landing Gear             | Tarot 680 Pro           | 1 set    |\n",
+      "| Radio System             | FrSky Taranis X9D       | 1 set    |\n",
+      "| GPS Module               | Ublox Neo M8N           | 1        |\n",
+      "\n",
+      "**Note:** \n",
+      "- This is a high-level list; actual selection should be based on weight calculations and preferred flight time.\n",
+      "- You may need to adjust motor size, propellers, and battery for optimal flight and endurance.\n",
+      "- Always check compatibility (ESC/motor/prop sizes, voltages).\n",
+      "\n",
+      "Would you like recommendations for specific brands or places to source these parts?\n"
+     ]
+    }
+   ],
    "source": [
     "response = await agent.run(\"Build a bill of materials for a drone that can carry 5 lbs\", tools=bing_search_tool)\n",
     "print(response.text)"
