--- a/007_BingCustomSearch.ipynb
+++ b/007_BingCustomSearch.ipynb
@@ -65,9 +65,7 @@
     "print(os.getenv('BING_CUSTOM_CONNECTION_NAME'))\n",
     "\n",
     "print('these are required for Bing Search configuration:')\n",
-    "print(os.getenv('BING_CUSTOM_CONNECTION_ID'))\n",
-    "print(os.getenv(\"BING_CONNECTION_ID\"))\n",
-    "print(os.getenv(\"BING_CONNECTION_NAME\"))"
+    "print(os.getenv(\"BING_CONNECTION_ID\"))\n"
    ]
   },
   {
@@ -229,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.8"
   }
  },
  "nbformat": 4,
